# meineDistribution

./: LICENSE  README.md  pyproject.toml
src/meinPaket/: __init__.py  info.txt  meineDatumsfunktionen.py  meineZufallsfunktionen.py
