[project]
name = "<meineDistributionStephan>"
version = "0.0.<x>"
authors = [
    { name = "Gabriel Stephan", email = "stefan204@live.at" }
]
description = "Stellt Datums- und Zufallsfunktionen zur Verfügung"
keywords = ["Datum", "Zufall"]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/stefan204/meineDistribution"
